# kernel

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  create-sd-image.sh  run-qemu.sh
docs/: issues.md  userland-roadmap.md
include/: common.h  sysregs.h  utils.h
include/arch/: exception.h  sysregs.h  trapframe.h
include/drivers/: mailbox.h
include/lib/: string.h
include/mm/: frame_alloc.h  mmu.h
include/peripherals/: mailbox.h
include/proc/: task.h
include/sys/: syscall.h
include/user/: elf.h  embedded.h
include/video/: console_fb.h  font8x8.h  framebuffer.h
src/: boot.S  console.c  kernel.c  linker.ld  mini_uart.c  utils.S
src/arch/: entry.S  exception.c  vectors.S
src/drivers/: mailbox.c
src/lib/: printf.c  stdlib.c  string.c
src/mm/: frame_alloc.c  mmu.c
src/proc/: task.c
src/sys/: syscall.c
src/user/: elf.c  embedded.c  hello.S
src/video/: console_fb.c  framebuffer.c
user/: crt0.S  hello.c
user/libk/: abi.h  koraos.h  syscall.S
